# Planner

./: .rustfmt.toml  Cargo.toml  input-classes.csv  readme.md  timetable.txt
.github/workflows/: docs.yml
src/: main.rs  mpi_utils.rs
src/algorithm/: config.rs  data.rs  datatypes.rs  mod.rs  random.rs  tuple.rs
