[package]
name = "planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = "4.5.4"
mpi = { version = "0.7.0", features = ["derive", "complex", "user-operations"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.0"
rand = "0.9.0-alpha.1"
serde_cbor = "0.11.2"